@@ -1,12 +1,15 @@
-googleVis 0.5.0 [2014-02-08]
+googleVis 0.5.0 [2014-02-09]
 ----------------------------
 NEW FEATURES
 
 * New functions gvisSankey, gvisAnnotationChart, gvisHistogram,
   gvisCalendar and gvisTimeline
 
-* New demo Trendlines shows how trend-lines can be added to
+* New demo Trendlines showing how trend-lines can be added to
   Scatter-, Bar-, Column-, and Line Charts.
+
+* New vignettes written in R Markdown showcasing googleVis
+  examples and how the package works with knitr.
 
 Changes
 
@@ -14,6 +17,9 @@ Changes
   instead a link to the online Google API documentation is given. 
 
 * Updated googleVis demo
+
+* If you use RStudio, then by default all charts are now shown 
+  in its Viewer Pane, including Flash charts such as Motion Charts
 
 
 googleVis 0.4.7 [2013-11-10]
